@@ -4,6 +4,8 @@
 
     * las/arch/x86_64/main.c: Added the DIV instruction
 
+    * las/arch/x86_64/main.c: Added the HLT instruction
+
 
 2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>
 
